--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-modal-video",
-  "version": "1.2.10",
+  "name": "react-modal-video-rv18",
+  "version": "1.2.11",
   "main": "lib/index.js",
   "description": "Modal Video Viewer",
   "author": "appleple",
@@ -43,8 +43,8 @@
     "npm-run-all": "^4.0.1",
     "onchange": "^3.3.0",
     "power-assert": "^1.4.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "stringify": "^5.1.0",
     "uglify-js": "^2.8.22",
     "watchify": "^3.9.0"
@@ -53,7 +53,7 @@
     "react-transition-group": "^2.2.1"
   },
   "peerDependencies": {
-    "react": "^16.2.0 || ^17.0.0",
-    "react-dom": "^16.2.0 || ^17.0.0"
+    "react": "^16.x.x || ^17.x.x || ^18.x.x",
+    "react-dom": "^16.x.x || ^17.x.x || ^18.x.x"
   }
 }
